--- a/src/style.css
+++ b/src/style.css
@@ -259,3 +259,147 @@ body {
   -ms-transform: scale(0.5);
   -o-transform: scale(0.5);
 }
+
+/*                 Form - Booking                */
+.form-section {
+  display: flex;
+  justify-content: center;
+}
+.booking {
+  display: flex;
+  gap: 2em;
+  justify-content: space-between;
+  align-items: center;
+  background-color: var(--main);
+  color: white;
+  padding: 2em;
+  margin: 50px 0 0 0;
+  max-width: 850px;
+  font-family: var(--fontSec);
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+}
+
+.booking .image p {
+  text-align: center;
+  font-family: var(--fontMain);
+  font-size: 40px;
+  margin: 0 0 10px 0;
+}
+
+.booking .image div {
+  max-height: 682px;
+  max-width: 331px;
+  overflow: hidden;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+}
+
+.booking .image div img {
+  transform: scale(0.165) translate(-292%, -257%);
+  -webkit-transform: scale(0.165) translate(-292%, -257%);
+  -moz-transform: scale(0.165) translate(-292%, -257%);
+  -ms-transform: scale(0.165) translate(-292%, -257%);
+  -o-transform: scale(0.165) translate(-292%, -257%);
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  text-align: center;
+  gap: 20px;
+  flex: 1;
+  height: 682px;
+}
+
+.form div > p {
+  font-size: 24px;
+}
+
+.form div {
+  display: flex;
+  flex-flow: column wrap;
+  gap: 10px;
+}
+input[type="date"] {
+  position: relative;
+  overflow: visible;
+}
+
+.form div label {
+  flex: 1;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 20px;
+  background-color: var(--third);
+  color: var(--main);
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+  padding: 15px 15px 15px 25px;
+}
+
+.form div label i {
+  font-size: 35px;
+}
+
+.form div label:last-of-type i {
+  font-size: 30px;
+}
+
+input[type="date"]::-webkit-inner-spin-button,
+input[type="date"]::-webkit-calendar-picker-indicator {
+  filter: invert(36%) sepia(3%) saturate(2519%) hue-rotate(109deg)
+    brightness(83%) contrast(77%);
+  -webkit-filter: invert(36%) sepia(3%) saturate(2519%) hue-rotate(109deg);
+}
+
+.form div label input,
+.form div label select {
+  flex: 1;
+  padding: 10px;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+  border: 1px solid var(--main);
+  font-family: var(--fontSec);
+  font-size: 24px;
+  color: var(--main);
+}
+
+.form div label input:focus,
+.form div label select:focus {
+  outline: none;
+}
+
+.booking input[type="submit"] {
+  background-color: var(--second);
+  border: none;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+  font-family: var(--fontSec);
+  font-weight: bold;
+  font-size: 20px;
+  margin: 0 auto;
+  padding: 20px 30px;
+  cursor: pointer;
+}
+
+.booking input[type="submit"]:focus {
+  outline: none;
+}
