--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Karla:wght@400;500;600;700&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Markazi+Text:wght@400;500;600;700&display=swap");
 
+html {
+  scroll-behavior: smooth;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+  height: 100vh;
+  box-sizing: border-box;
+}
+
 :root {
   --main: #495e57;
   --second: #f4ce14;
@@ -11,13 +22,25 @@
   --fontSec: "Karla", sans-serif;
 }
 
-body {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
+::-webkit-scrollbar {
+  width: 10px;
+  background: transparent;
 }
 
-.container {
+::-webkit-scrollbar-thumb {
+  background: var(--second);
+  border-radius: 5px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  -ms-border-radius: 5px;
+  -o-border-radius: 5px;
+}
+
+::-webkit-scrollbar-track {
+  box-shadow: inset 0 0 5px rgba(0, 0, 0, 0.4);
+}
+
+/* .container {
   padding: 0 18em;
 }
 
@@ -31,18 +54,50 @@ body {
   .container {
     padding: 0 1em;
   }
-}
-/*                 Header               */
-.header {
-  display: flex;
-  justify-content: space-between;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  padding-top: 10px;
-  padding-bottom: 10px;
+} */
+
+.container {
+  margin: 0 auto;
+  padding: var(--mainPadding) 20px;
 }
 
-.header:first-child {
-  align-items: center;
+@media (min-width: 768px) {
+  .container {
+    width: 750px;
+  }
+}
+
+@media (min-width: 990px) {
+  .container {
+    width: 970px;
+  }
+}
+
+@media (min-width: 1200px) {
+  .container {
+    width: 1170px;
+  }
+}
+
+.visible-f {
+  display: flex !important;
+}
+
+.hidden {
+  display: none !important;
+}
+
+/*                 Header               */
+.header {
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.header .container {
+  display: flex;
+  justify-content: space-between;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  position: relative;
 }
 
 .header menu {
@@ -53,7 +108,11 @@ body {
   gap: 1em;
 }
 
-.header menu li * {
+.header menu li {
+  position: relative;
+}
+
+.header menu li a {
   text-decoration: none;
   font-family: var(--fontSec);
   font-weight: 600;
@@ -65,11 +124,11 @@ body {
   position: relative;
 }
 
-.header menu li *:visited {
+.header menu li a:visited {
   color: black;
 }
 
-.header menu li *::after {
+.header menu li::after {
   content: "";
   position: absolute;
   width: 100%;
@@ -80,8 +139,81 @@ body {
   display: none;
 }
 
-.header menu li *:hover::after {
+.header menu li:hover::after {
   display: block;
+}
+
+.header nav i {
+  display: none;
+}
+
+@media (max-width: 690px) {
+  .header .container {
+    padding: 10px 20px;
+  }
+  .header nav i {
+    top: 10px;
+    right: 20px;
+    font-size: 30px;
+    color: var(--main);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    z-index: 2;
+  }
+  .header nav menu {
+    position: fixed;
+    display: none;
+    top: 0;
+    right: 0;
+    margin: 0;
+    flex-direction: column;
+    justify-content: center;
+    gap: 0;
+    background-color: var(--main);
+    width: 100%;
+    height: 100%;
+    padding: 0;
+    z-index: 1;
+  }
+
+  .header nav menu li {
+    padding: 50px 0;
+    width: 100%;
+    text-align: center;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+  }
+
+  .header nav menu li:hover {
+    background-color: white;
+  }
+  .header nav menu li:hover a {
+    color: black !important;
+  }
+  .header nav menu li a {
+    color: white;
+    font-size: 24px;
+  }
+  .header nav menu li a:visited {
+    color: white;
+  }
+
+  .header menu li::after {
+    left: 0;
+    bottom: 0;
+    height: 5px;
+    width: 100%;
+    transition: 0.3s;
+    -webkit-transition: 0.3s;
+    -moz-transition: 0.3s;
+    -ms-transition: 0.3s;
+    -o-transition: 0.3s;
+  }
 }
 
 /*                 Hero Section               */
@@ -151,17 +283,29 @@ body {
   color: black;
 }
 
+@media (max-width: 830px) {
+  .hero-section article {
+    padding: 10px 30px;
+  }
+  .hero-section article .img {
+    display: none;
+  }
+}
+
+@media (max-width: 360px) {
+  .hero-section article div h1 {
+    font-size: 3em;
+  }
+  .hero-section article div h2 {
+    font-size: 2em;
+    margin-top: -15px;
+  }
+}
 /*              Specials              */
 .specials article {
   display: flex;
   flex-direction: column;
   padding-top: 5em;
-}
-
-.specials article > div:nth-child(2) {
-  display: flex;
-  justify-content: center;
-  gap: 24px;
 }
 
 .specials article > div {
@@ -192,11 +336,20 @@ body {
   -o-border-radius: 16px;
 }
 
+.specials article > div:nth-child(2) {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 24px;
+  padding: 0 20px;
+}
+
 .specials article .card {
+  min-width: 200px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  height: 483px;
+  max-height: 483px;
   width: 266px;
   background-color: var(--third);
   border-radius: 16px;
@@ -210,9 +363,16 @@ body {
 .specials article .text {
   flex: 1;
   display: flex;
-  justify-content: space-between;
-  flex-direction: column;
+  flex-flow: row wrap;
+  gap: 30px;
   padding: 20px;
+}
+
+.specials article .head {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 
 .specials article .text > p {
@@ -220,12 +380,7 @@ body {
   color: var(--fourth);
   margin-bottom: 2em;
   margin-top: -30px;
-}
-
-.specials article .head {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+  width: 100%;
 }
 
 .specials article .head h3 {
@@ -246,6 +401,7 @@ body {
   justify-content: flex-start;
   align-items: center;
   height: 30px;
+  align-self: flex-end;
 }
 
 .specials article .delivery p {
@@ -260,6 +416,22 @@ body {
   -o-transform: scale(0.5);
 }
 
+@media (max-width: 780px) {
+  .specials article > div a {
+    display: none;
+  }
+  .specials article > div h2 {
+    text-align: center;
+  }
+  .specials article > div {
+    justify-content: center;
+  }
+}
+@media (max-width: 780px) {
+  .specials article > div h2 {
+    font-size: 2.5em;
+  }
+}
 /*                 Form - Booking                */
 .form-section {
   display: flex;
@@ -273,7 +445,7 @@ body {
   background-color: var(--main);
   color: white;
   padding: 2em;
-  margin: 50px 0 0 0;
+  margin: 25px 0;
   max-width: 850px;
   font-family: var(--fontSec);
   border-radius: 16px;
@@ -402,4 +574,460 @@ input[type="date"]::-webkit-calendar-picker-indicator {
 
 .booking input[type="submit"]:focus {
   outline: none;
+}
+
+@media (max-width: 768px) {
+  .booking .image {
+    display: none;
+  }
+  .form {
+    justify-content: center;
+    height: fit-content;
+    gap: 50px;
+  }
+}
+
+@media (max-width: 470px) {
+  .form div label input,
+  .form div label select {
+    font-size: 20px;
+  }
+  .form-section {
+    padding: 0 5%;
+  }
+}
+
+@media (max-width: 470px) {
+  .booking {
+    padding: 15px;
+  }
+  .form div label i {
+    font-size: 25px;
+  }
+  .form div label {
+    padding: 10px 10px 10px 15px;
+    gap: 10px;
+  }
+  .form div label input,
+  .form div label select {
+    font-size: 18px;
+  }
+  .booking input[type="submit"] {
+    font-size: 16px;
+  }
+}
+
+/*                 Confirmed Booking                 */
+.confirmed-booking article {
+  background-color: var(--main);
+  color: white;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+  margin: 5% auto;
+  padding: 50px 40px;
+  max-width: 600px;
+}
+
+@media (max-width: 730px) {
+  .confirmed-booking {
+    padding: 0 4%;
+  }
+}
+
+.confirmed-booking article * {
+  margin: 0;
+  padding: 0;
+}
+
+.confirmed-booking article h2 {
+  font-family: var(--fontMain);
+  font-size: 3em;
+  font-weight: 500;
+  text-align: center;
+  margin-bottom: 20px;
+}
+
+.confirmed-booking article div {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: column;
+  font-family: var(--fontSec);
+}
+
+.confirmed-booking article div h3 {
+  font-size: 1.8em;
+  color: var(--second);
+  margin-bottom: 15px;
+}
+
+.confirmed-booking article div ul {
+  font-size: 1.4em;
+  font-weight: bold;
+  color: var(--second);
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 7px;
+}
+
+.confirmed-booking article div ul li span {
+  font-weight: normal;
+  color: white;
+}
+
+.confirmed-booking article > button {
+  display: block;
+  margin: 5% auto 0;
+  background-color: var(--second);
+  color: black;
+  font-family: var(--fontSec);
+  font-weight: 700;
+  font-size: 1.3em;
+  text-decoration: none;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+  cursor: pointer;
+}
+
+@media (max-width: 645px) {
+  .confirmed-booking article h2 {
+    font-size: 2.5em;
+    line-height: 1;
+  }
+
+  .confirmed-booking article div h3 {
+    font-size: 1.4em;
+  }
+
+  .confirmed-booking article div ul {
+    font-size: 1.1em;
+  }
+}
+/*              Testimonials               */
+.testimonials {
+  background-color: var(--main);
+}
+.testimonials article {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  gap: 20px;
+  align-items: center;
+  font-family: var(--fontSec);
+  font-weight: normal;
+  padding: 75px 0 150px;
+}
+
+.testimonials article > h2 {
+  font-family: var(--fontMain);
+  font-size: 48px;
+  font-weight: 500;
+  color: white;
+}
+
+.testimonials article > div {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+  gap: 21px;
+}
+
+.testimonials .box {
+  width: 150px;
+  height: 150px;
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  background-color: white;
+  padding: 15px;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+}
+
+.testimonials .box > * {
+  margin: 0;
+  padding: 0;
+}
+
+.testimonials .box h4 {
+  font-weight: bold;
+}
+.testimonials .box h4 span {
+  color: goldenrod;
+}
+
+.testimonials .box .user {
+  display: flex;
+  gap: 10px;
+}
+
+.testimonials .box .image-container {
+  width: 57px;
+  height: 57px;
+  overflow: hidden;
+}
+
+.testimonials .box .image-container img {
+  max-width: 100%;
+}
+
+.testimonials .box .user p {
+  font-weight: bold;
+}
+
+.testimonials .box > p {
+  margin: auto 0;
+  color: var(--fourth);
+  font-size: 15px;
+}
+
+@media (max-width: 990px) {
+  .testimonials article > div {
+    justify-content: center;
+  }
+}
+
+/*                About                */
+.about article {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-family: var(--fontSec);
+  padding: 5% 0;
+}
+
+.about article .text {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.about article .text > p {
+  font-family: var(--fontSec);
+  font-size: 24px;
+  color: var(--mai);
+}
+
+.about article .main h1 {
+  font-family: var(--fontMain);
+  font-size: 64px;
+  color: var(--second);
+  font-weight: 500;
+  margin: 0;
+}
+
+.about article .main h2 {
+  color: var(--main);
+  font-family: var(--fontMain);
+  font-weight: 700;
+  font-size: 40px;
+  margin: -15px 0 0 0;
+}
+
+.about article .images {
+  display: flex;
+  padding-top: 15%;
+}
+
+.about article .image-container {
+  width: 262px;
+  height: 355px;
+  overflow: hidden;
+  border-radius: 16px;
+  -webkit-border-radius: 16px;
+  -moz-border-radius: 16px;
+  -ms-border-radius: 16px;
+  -o-border-radius: 16px;
+  box-shadow: 0px 5px 20px rgba(0, 0, 0, 0.25);
+}
+
+.about article .images img {
+  width: 100%;
+  transform: scale(2.2) translate(-15%, 25%);
+  -webkit-transform: scale(2.2) translate(-15%, 25%);
+  -moz-transform: scale(2.2) translate(-15%, 25%);
+  -ms-transform: scale(2.2) translate(-15%, 25%);
+  -o-transform: scale(2.2) translate(-15%, 25%);
+}
+
+.about article .image-container:last-child {
+  transform: translateY(-30%);
+  -webkit-transform: translateY(-30%);
+  -moz-transform: translateY(-30%);
+  -ms-transform: translateY(-30%);
+  -o-transform: translateY(-30%);
+}
+
+.about article .image-container:first-child {
+  transform: translateX(30%);
+  -webkit-transform: translateX(30%);
+  -moz-transform: translateX(30%);
+  -ms-transform: translateX(30%);
+  -o-transform: translateX(30%);
+}
+
+@media (max-width: 1020px) {
+  .about article {
+    padding: 30px 20px;
+    flex-flow: column-reverse wrap;
+    gap: 50px;
+  }
+  .about article .images {
+    padding-top: 20%;
+  }
+}
+
+@media (max-width: 570px) {
+  .about article .image-container:last-child {
+    display: none;
+    padding: 30px 20px;
+  }
+  .about article .image-container:first-child {
+    transform: translate(0);
+    -webkit-transform: translate(0);
+    -moz-transform: translate(0);
+    -ms-transform: translate(0);
+    -o-transform: translate(0);
+    width: 100%;
+  }
+  .about article .image-container:first-child img {
+    width: 200%;
+    transform: translate(-40%, -20%) scale(1);
+    -webkit-transform: translate(-40%, -20%) scale(1);
+    -moz-transform: translate(-40%, -20%) scale(1);
+    -ms-transform: translate(-40%, -20%) scale(1);
+    -o-transform: translate(-40%, -20%) scale(1);
+  }
+}
+
+@media (max-width: 415px) {
+  .about article .image-container:first-child {
+    transform: translate(0);
+    -webkit-transform: translate(0);
+    -moz-transform: translate(0);
+    -ms-transform: translate(0);
+    -o-transform: translate(0);
+    height: fit-content;
+  }
+  .about article .image-container:first-child img {
+    transform: translate(-45%, -10%) scale(1.3);
+    -webkit-transform: translate(-45%, -10%) scale(1.3);
+    -moz-transform: translate(-45%, -10%) scale(1.3);
+    -ms-transform: translate(-45%, -10%) scale(1.3);
+    -o-transform: translate(-45%, -10%) scale(1.3);
+  }
+  .about article .main h1 {
+    font-size: 3em;
+  }
+  .about article .main h2 {
+    font-size: 2em;
+  }
+  .about article .text p {
+    font-size: 1.3em;
+  }
+}
+
+/*              Scroll to top              */
+.scroll-top {
+  font-size: 1.5em;
+  background-color: white;
+  color: var(--main);
+  padding: 5px 10px;
+  border: 2px solid var(--main);
+  position: fixed;
+  bottom: 50px;
+  right: 40px;
+  height: fit-content;
+  box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.25);
+  cursor: pointer;
+}
+
+/*                  Footer               */
+footer {
+  background-color: var(--main);
+  color: white;
+}
+
+footer .container {
+  display: flex;
+  justify-content: space-between;
+  gap: 3em;
+  font-family: var(--fontSec);
+  font-size: 20px;
+  padding-top: 70px;
+  padding-bottom: 70px;
+}
+
+footer img {
+  height: 229px;
+  width: 140px;
+}
+
+footer ul {
+  list-style: none;
+  padding: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 0.2em;
+}
+
+footer .container div p {
+  font-weight: bold;
+}
+
+footer ul li a {
+  color: white;
+  text-decoration: none;
+  transition: 0.3s;
+  -webkit-transition: 0.3s;
+  -moz-transition: 0.3s;
+  -ms-transition: 0.3s;
+  -o-transition: 0.3s;
+}
+
+footer ul li a:hover {
+  color: var(--second);
+}
+
+@media (max-width: 910px) {
+  footer .container {
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 50px 30px;
+  }
+  footer .container > * {
+    flex-basis: 40%;
+  }
+}
+
+@media (max-width: 820px) {
+  .hero-section article,
+  footer .container {
+    padding: 20px 0 20px 20px;
+  }
+}
+
+@media (max-width: 403px) {
+  footer .container {
+    flex-wrap: wrap;
+    align-items: center;
+    padding: 50px 20px;
+  }
+  footer .container > * {
+    flex: 1;
+    justify-content: center;
+    align-items: center;
+  }
 }
