--- a/src/style.css
+++ b/src/style.css
@@ -389,9 +389,15 @@ body {
   align-self: flex-end;
 }
 
+.specials article .text > a {
+  text-decoration: none;
+  color: black;
+}
+
 .specials article .delivery p {
   margin: 0;
 }
+
 .specials article .delivery img {
   width: 50px;
   transform: scale(0.5);
